# sylib_ros

./: CMakeLists.txt  classic_urg.bag  package.xml
doc/: Doxyfile
include/sylib_ros/: ImageProc.h  Labeling.h  Lidar2D.h  MoveBaseGoal.h  Point.h  TextDetection.h
launch/: ocr.launch  scan_fixer.launch
sample_src/: ocr.cpp  scan_fixer.cpp
src/: image_proc.cpp  lidar2d.cpp  move_base_goal.cpp  point.cpp  text_detection.cpp
